--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,44 @@
     <title>The Baking Book</title>
 </head>
 <body>
+
+<header>
+    <!-- Nav Bar-->
+ <nav class="nav-colour">
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">The Baking Book</a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+      </ul>
+    </div>
+  </nav>
+    <!-- Mobile Nav Bar-->
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="sass.html">Sass</a></li>
+    <li><a href="badges.html">Components</a></li>
+    <li><a href="collapsible.html">Javascript</a></li>
+    <li><a href="mobile.html">Mobile</a></li>
+  </ul>
+</header>
+
 <h1>Home Page</h1>
 {% block content %}
 {% endblock %}
 
+
+<!-- Footer Menu -->
+   <footer class="page-footer">
+          <div class="footer-copyright">
+            <div class="container">
+            ©2020 Copyright Amie Johnstone (For Educational Purposes Only)
+            </div>
+          </div>
+        </footer>
+ <!-- Script Tags -->       
 <script
   src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
