--- a/templates/base.html
+++ b/templates/base.html
@@ -1,72 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-		integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-		crossorigin="anonymous" type="text/css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		type="text/css">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-     <link rel="shortcut icon" type="image/png" href="static/images/favicon.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+      type="text/css"
     />
-	{% block styles %}
-	{% endblock %}
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
+      type="text/css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="static/images/favicon.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    {% block styles %} 
+    {% endblock %} 
 
-	<title>The Baking Book</title>
-</head>
+    <title>The Baking Book</title>
+  </head>
 
+  <body>
+    <header>
+      <!-- Nav Bar-->
+      <nav class="nav-colour">
+        <div class="nav-wrapper">
+          <a href="index.html" class="brand-logo">
+          <img class="img-responsive" src="static/images/logo.png" alt="logo"></a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+            ><i class="fas fa-bars"></i
+          ></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="static/templates/index.html">Home</a></li>
+            <li><a href="static/templates/recipes.html">Upload Recipes</a></li>
+            <li><a href="static/templates/search.html" class="fas fa-search"></a></li>
+          </ul>
+        </div>
+      </nav>
 
-<body>
+      <!-- Mobile Nav Bar-->
+      <ul class="sidenav" id="mobile-demo">
+        <li><h3 class="center-align">The Baking Book</h3></li>
+        <li><a href="templates/index.html">Home</a></li>
+        <li><a href="templates/recipes.html">Recipes</a></li>
+        <li><a href="templates/search.html">Search</a></li>
+      </ul>
+    </header>
+   
 
-	<header>
-		<!-- Nav Bar-->
-		<nav class="nav-colour">
-			<div class="nav-wrapper">
-				<a href="#!" class="brand-logo">The Baking Book</a>
-				<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
-				<ul class="right hide-on-med-and-down">
-					<li><a href="#">Home</a></li>
-                    <li><a href="#">Recipes</a></li>
-                    <li><a href="#">Search</a></li>
-                    <li><a href="#">Favourites</a></li>
-				</ul>
-			</div>
-		</nav>
-		<!-- Mobile Nav Bar-->
-		<ul class="sidenav" id="mobile-demo">
-            <li><h3 class="center-align">The Baking Book</h3></li>
-			<li><a href="#">Home</a></li>
-            <li><a href="#">Recipes</a></li>
-            <li><a href="#">Search</a></li>
-            <li><a href="#">Favourites</a></li>
-		</ul>
-	</header>
+    <h1>Home Page</h1>
+    {% block content %} 
+    {% endblock %}
 
-	<h1>Home Page</h1>
-	{% block content %}
-	{% endblock %}
+    <!-- Footer Menu -->
+    <footer class="page-footer">
+      <div class="footer-copyright">
+        <div class="container">
+          ©2020 Copyright Amie Johnstone (For Educational Purposes Only)
+        </div>
+        <div class="social-icons">
+          <a href="https://www.facebook.com/" target="_blank"
+            ><li class="fab fa-facebook"></li
+          ></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><li class="fab fa-instagram-square"></li
+          ></a>
+          <a href="https://www.pinterest.co.uk/" target="_blank"
+            ><li class="fab fa-pinterest"></li
+          ></a>
+        </div>
+      </div>
+    </footer>
 
-
-	<!-- Footer Menu -->
-	<footer class="page-footer">
-		<div class="footer-copyright">
-			<div class="container">
-				©2020 Copyright Amie Johnstone (For Educational Purposes Only)
-			</div>
-		</div>
-	</footer>
-
-
-	<!-- Script Tags -->
-	<script src="http://code.jquery.com/jquery-3.5.1.min.js"
-		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<script src="{{ url_for('static', filename='js/script.js') }}"></script>
-	{% block scripts %}
-	{% endblock %}
-</body>
-
+    <!-- Script Tags -->
+    <script
+      src="http://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    {% block scripts %} 
+    {% endblock %}
+  </body>
 </html>
