--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@200&display=swap"
       rel="stylesheet"
     />
-    {% block styles %} 
-    {% endblock %} 
+    {% block styles %} {% endblock %}
 
     <title>The Baking Book</title>
   </head>
@@ -40,15 +39,17 @@
       <!-- Nav Bar-->
       <nav class="nav-colour">
         <div class="nav-wrapper">
-          <a href="index.html" class="brand-logo">
-          <img class="img-responsive" src="static/images/logo.png" alt="logo"></a>
+          <a href="{{ url_for('index') }}" class="brand-logo">
+            <img class="img-responsive" src="static/images/logo.png" alt="logo"
+          /></a>
+
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"
             ><i class="fas fa-bars"></i
           ></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="static/templates/index.html">Home</a></li>
-            <li><a href="static/templates/recipes.html">Upload Recipes</a></li>
-            <li><a href="static/templates/search.html" class="fas fa-search"></a></li>
+            <li><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('get_recipes') }}">Upload Recipes</a></li>
+            <li><a href="#" class="fas fa-search"></a></li>
           </ul>
         </div>
       </nav>
@@ -56,16 +57,13 @@
       <!-- Mobile Nav Bar-->
       <ul class="sidenav" id="mobile-demo">
         <li><h3 class="center-align">The Baking Book</h3></li>
-        <li><a href="templates/index.html">Home</a></li>
-        <li><a href="templates/recipes.html">Recipes</a></li>
-        <li><a href="templates/search.html">Search</a></li>
+        <li><a href="{{ url_for('index') }}">Home</a></li>
+        <li><a href="{{ url_for('get_recipes') }}">Upload Recipes</a></li>
+        <li><a href="#" class="fas fa-search"></a></li>
       </ul>
     </header>
-   
 
-    <h1>Home Page</h1>
-    {% block content %} 
-    {% endblock %}
+    {% block content %} {% endblock %}
 
     <!-- Footer Menu -->
     <footer class="page-footer">
@@ -89,13 +87,12 @@
 
     <!-- Script Tags -->
     <script
-      src="http://code.jquery.com/jquery-3.5.1.min.js"
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    {% block scripts %} 
-    {% endblock %}
+    {% block scripts %} {% endblock %}
   </body>
 </html>
