--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,58 @@
 {% extends "base.html" %} {% block content %}
 
-<div>
+<div class="hero-block">
   <img
     class="hero-image"
     src="static/images/cupcakes-hero.jpg"
     alt="hero-image"
   />
-  <h2>Explore and share a variety of home made dessert recipes</h2>
+  <div class="text">
+    <h2>Explore and share a variety of home made dessert recipes</h2>
+  </div>
 </div>
 
-<h2>Recipe Cards</h2>
-{% for recipes in recipes %} {{ recipes.name }}<br />
-{{ recipes.image_url }}<br />
-{{ recipes.author }}<br />
-{{ recipes.author_id }}<br />
-{{ recipes.current_rating }}<br />
-{{ recipes.description }}<br />
-{{ recipes.image_url_id }}<br />
-{{ recipes.preptime_hrs }}<br />
-{{ recipes.preptime_mins }}<br />
-{{ recipes.baking_time_hrs }}<br />
-{{ recipes.baking_time_mins }} <br />
-{{ recipes.serves }}<br />
-{{ recipes.total_rating }}<br />
-{% endfor %}
+<br />
+<br />
 
-<ul class="collapsible">
-  <li>
-    <div class="collapsible-header">
-      <i class="material-icons">filter_drama</i>First
+<h2>Recipe Cards</h2>
+
+<div class="container">
+  <div class="row">
+    <div class="col s3">
+      <div class="card">
+        {% for index in index %}
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="{{ index.image_url }}" />
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">
+            {{ index.name }} <br />
+            <i class="fas fa-ellipsis-h"></i
+          ></span>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"
+            >{{ index.name }} <i class="fas fa-times"></i
+          ></span>
+          <ul>
+            <i class="far fa-clock"> {{ index.preptime }}</i>
+            <i class="fas fa-hourglass-end"> {{ index.bakingtime }}</i>
+            <i class="fas fa-utensils"> {{ index.serves }}</i>
+          </ul>
+          <p>{{ index.description }}</p>
+          <p><a href="#">View More</a></p>
+        </div>
+        {% endfor %}
+      </div>
     </div>
-    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-  </li>
-</ul>
-{% endblock %}
+  </div>
+</div>
+
+{% for index in index %} {{ index.image_url }}<br />
+{{ index.name }}<br />
+{{ index.total_rating }}<br />
+{{ index.preptime }}<br />
+{{ index.bakingtime }}<br />
+{{ index.serves }}<br />
+{{ index.description }}<br />
+{% endfor %} {% endblock %}
