Created add_recipes.html file and inserted a form

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,8 @@
 <br />
 <br />
 
-<h2>Recipe Cards</h2>
+
+<!-- Recipe Cards -->
 
 <div class="container">
   <div class="row">
@@ -47,15 +48,5 @@
     </div>
   </div>
 </div>
-
-{% for index in index %} 
-{{ index.image_url }}<br />
-{{ index.name }}<br />
-{{ index.total_rating }}<br />
-{{ index.preptime }}<br />
-{{ index.bakingtime }}<br />
-{{ index.serves }}<br />
-{{ index.description }}<br />
-{% endfor %} 
 
 {% endblock %}
