--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,8 @@
           ></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="{{ url_for('index') }}">Home</a></li>
-            <li><a href="{{ url_for('get_recipes') }}">Upload Recipes</a></li>
+            <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
+            <li><a href="{{ url_for('add_recipes') }}">Upload Recipes</a></li>
             <li><a href="#" class="fas fa-search"></a></li>
           </ul>
         </div>
@@ -58,7 +59,8 @@
       <ul class="sidenav" id="mobile-demo">
         <li><h3 class="center-align">The Baking Book</h3></li>
         <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="{{ url_for('get_recipes') }}">Upload Recipes</a></li>
+        <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
+        <li><a href="{{ url_for('add_recipes') }}">Upload Recipes</a></li>
         <li><a href="#" class="fas fa-search"></a></li>
       </ul>
     </header>
