--- a/templates/add_recipes.html
+++ b/templates/add_recipes.html
@@ -1,7 +1,17 @@
 {% extends "base.html" %} {% block content %}
+<div class="hero-block">
+  <img
+    class="hero-image"
+    src="static/images/add_recipe_img.png"
+    alt="hero-image"
+  />
+</div>
+<br />
+<br />
+
 
 <!-- Upload Recipes -->
-<h3>Upload Recipes</h3>
+<h3 id="add_recipe_title">Upload A Recipe</h3>
 <div class="row-card-panel grey lighten-5 container">
   <form class="col s12" method="POST" action="{{ url_for('add_recipes') }}">
     <div class="row">
@@ -15,7 +25,7 @@
           class="validate"
           required
         />
-        <label class="fas fa-user" for="author">Author</label>
+        <label class="fas fa-user" for="author">      Author</label>
       </div>
       <!-- Recipe Name -->
       <div class="input-field col s12">
@@ -26,7 +36,7 @@
           class="validate"
           required
         />
-        <label class="fas fa-cookie-bite" for="recipe_name">Recipe Name</label>
+        <label class="fas fa-cookie-bite" for="recipe_name">      Recipe Name</label>
       </div>
     </div>
     <!-- Upload Image -->
@@ -43,21 +53,21 @@
           class="validate"
           required
         />
-        <label class="fas fa-plus-circle" for="description">Description</label>
+        <label class="fas fa-plus-circle" for="description">      Description</label>
       </div>
     </div>
     <!-- Preptime -->
     <div class="row">
       <div class="input-field col s12">
         <input id="preptime" name="preptime" type="text" required />
-        <label class="fas fa-clock" for="prep-time">Prep Time</label>
+        <label class="fas fa-clock" for="prep-time">      Prep Time</label>
       </div>
     </div>
     <!-- Baking Time -->
     <div class="row">
       <div class="input-field col s12">
         <input id="bakingtime" name="bakingtime" type="text" required />
-        <label class="fas fa-hourglass-end" for="bakingtime">Baking Time</label>
+        <label class="fas fa-hourglass-end" for="bakingtime">      Baking Time</label>
       </div>
     </div>
     <!-- Serves -->
@@ -70,7 +80,7 @@
           class="validate"
           required
         />
-        <label class="fas fa-utensils" for="serves">Serves</label>
+        <label class="fas fa-utensils" for="serves">      Serves</label>
       </div>
     </div>
     <!-- Ingredients -->
@@ -84,7 +94,7 @@
           required
         />
         <label class="fas fa-mortar-pestle" for="ingredients"
-          >Ingredients</label
+          >      Ingredients</label
         >
       </div>
     </div>
@@ -97,12 +107,12 @@
           type="text"
           class="validate"
           required
-        />
-        <label class="fas fa-arrow-circle-down" for="method">Method</label>
+        /> 
+        <label class="fas fa-arrow-circle-down" for="method">      Method</label>
       </div>
     </div>
     <!-- Submit Button -->
-    <button class="btn waves-effect waves-light" type="submit">
+    <button class="button" type="submit">
       Upload Recipe
       <i class="material-icons left"></i>
     </button>
