--- a/templates/index.html
+++ b/templates/index.html
@@ -18,35 +18,35 @@
 
 <div class="container">
   <div class="row">
-    <div class="col s3">
+    <div class="col m3">
       <div class="card">
-        {% for index in index %}
+        {% for add_recipes in add_recipes %}
         <!-- Image -->
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="{{ index.image_url }}" />
+          <img class="activator" src="{{ add_recipes.image_url }}" />
         </div>
         <!-- Recipe Name-->
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">
-            {{ index.name }} <br />
+            {{ add_recipes.recipe_name }} <br />
             <i class="fas fa-ellipsis-h"></i
           ></span>
         </div>
         <!-- Recipe Name -->
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4"
-            >{{ index.name }} <i class="fas fa-times"></i
+            >{{ add_recipes.recipe_name }} <i class="fas fa-times"></i
           ></span>
           <!-- Preptime/ Bakingtime/ Serves -->
           <ul>
-            <i class="far fa-clock"> {{ index.preptime }}</i>
-            <i class="fas fa-hourglass-end"> {{ index.bakingtime }}</i>
-            <i class="fas fa-utensils"> {{ index.serves }}</i>
+            <i class="far fa-clock"> {{ add_recipes.preptime }}</i>
+            <i class="fas fa-hourglass-end"> {{ add_recipes.bakingtime }}</i>
+            <i class="fas fa-utensils"> {{ add_recipes.serves }}</i>
           </ul>
           <!-- Description -->
-          <p>{{ index.description }}</p>
+          <p>{{ add_recipes.description }}</p>
           <!-- View More -->
-          <p><a href="#">View More</a></p>
+          <p><a href="templates/view_more.html">View More</a></p>
         </div>
         {% endfor %}
       </div>
