--- a/templates/add_recipes.html
+++ b/templates/add_recipes.html
@@ -9,13 +9,11 @@
 <br />
 <br />
 
-
 <!-- Upload Recipes -->
 <h3 id="add_recipe_title">Upload A Recipe</h3>
 <div class="row-card-panel grey lighten-5 container">
   <form class="col s12" method="POST" action="{{ url_for('add_recipes') }}">
     <div class="row">
-      
       <!-- Author Name -->
       <div class="input-field col s12">
         <input
@@ -25,7 +23,7 @@
           class="validate"
           required
         />
-        <label class="fas fa-user" for="author">      Author</label>
+        <label class="fas fa-user" for="author">&nbsp;&nbsp;Author</label>
       </div>
       <!-- Recipe Name -->
       <div class="input-field col s12">
@@ -36,13 +34,30 @@
           class="validate"
           required
         />
-        <label class="fas fa-cookie-bite" for="recipe_name">      Recipe Name</label>
+        <label class="fas fa-cookie-bite" for="recipe_name"
+          >&nbsp;&nbsp;Recipe Name</label
+        >
       </div>
-    </div>
-    <!-- Upload Image -->
 
-    <!-- Description -->
-    <div class="row">
+
+
+      <!-- Upload Image -->
+      <div class="input-field col s12">
+        <input
+          id="image_url"
+          name="image_url"
+          type="text"
+          class="validate"
+          required
+        />
+        <label class="fas fa-images" for="image_url" 
+          >-&nbsp;&nbsp;Upload an Image Url</label
+        >
+        <img src="{{ image_url }}" />
+      </div>
+
+
+      <!-- Description -->
       <div class="input-field col s12">
         <input
           id="description"
@@ -53,25 +68,28 @@
           class="validate"
           required
         />
-        <label class="fas fa-plus-circle" for="description">      Description</label>
+        <label class="fas fa-plus-circle" for="description"
+          >&nbsp;&nbsp;Description</label
+        >
       </div>
-    </div>
-    <!-- Preptime -->
-    <div class="row">
+      <!-- Preptime -->
       <div class="input-field col s12">
         <input id="preptime" name="preptime" type="text" required />
-        <label class="fas fa-clock" for="prep-time">      Prep Time</label>
+        <label class="fas fa-clock" for="prep-time"
+          >&nbsp;&nbsp;Prep Time</label
+        >
       </div>
-    </div>
-    <!-- Baking Time -->
-    <div class="row">
+
+      <!-- Baking Time -->
+
       <div class="input-field col s12">
         <input id="bakingtime" name="bakingtime" type="text" required />
-        <label class="fas fa-hourglass-end" for="bakingtime">      Baking Time</label>
+        <label class="fas fa-hourglass-end" for="bakingtime"
+          >&nbsp;&nbsp;Baking Time</label
+        >
       </div>
-    </div>
-    <!-- Serves -->
-    <div class="row">
+      <!-- Serves -->
+
       <div class="input-field col s12">
         <input
           id="serves"
@@ -80,11 +98,10 @@
           class="validate"
           required
         />
-        <label class="fas fa-utensils" for="serves">      Serves</label>
+        <label class="fas fa-utensils" for="serves">&nbsp;&nbsp;Serves</label>
       </div>
-    </div>
-    <!-- Ingredients -->
-    <div class="row">
+      <!-- Ingredients -->
+
       <div class="input-field col s12">
         <input
           id="ingredients"
@@ -94,12 +111,11 @@
           required
         />
         <label class="fas fa-mortar-pestle" for="ingredients"
-          >      Ingredients</label
+          >&nbsp;&nbsp;Ingredients</label
         >
       </div>
-    </div>
-    <!-- Method -->
-    <div class="row">
+      <!-- Method -->
+
       <div class="input-field col s12">
         <input
           id="method"
@@ -107,16 +123,17 @@
           type="text"
           class="validate"
           required
-        /> 
-        <label class="fas fa-arrow-circle-down" for="method">      Method</label>
+        />
+        <label class="fas fa-arrow-circle-down" for="method"
+          >&nbsp;&nbsp;Method</label
+        >
       </div>
+      <!-- Submit Button -->
+      <button class="button" type="submit">
+        Upload Recipe
+        <i class="material-icons left"></i>
+      </button>
     </div>
-    <!-- Submit Button -->
-    <button class="button" type="submit">
-      Upload Recipe
-      <i class="material-icons left"></i>
-    </button>
-   
   </form>
 </div>
 
