--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col m3">
+    <div class="col s12 m3">
       <div class="card">
         {% for add_recipes in add_recipes %}
         <!-- Image -->
