--- a/templates/view_more.html
+++ b/templates/view_more.html
@@ -16,29 +16,35 @@
         <br/>
         <div class="symbols">
         <!-- Preptime -->
-        <i class="far fa-clock">
-        {{ add_recipes.preptime }} 
+        <p class="recipe_info">Prep Time&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Baking Time&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Serves</p>
+        <i class="far fa-clock" id="preptime-vm">
+        {{ add_recipes.preptime }}
         </i>
+        &nbsp; &nbsp; &nbsp;
         <!-- Baking Time -->
-        <i class="fas fa-hourglass-end">
+        <i class="fas fa-hourglass-end" id="bakingtime-vm">
         {{ add_recipes.bakingtime }} 
         </i>
+        &nbsp; &nbsp; &nbsp;
         <!-- Serves -->
-        <i class="fas fa-utensils">
+        <i class="fas fa-utensils" id="serves-vm">
         {{ add_recipes.serves }}
         </i>
+        &nbsp; &nbsp; &nbsp;
         </div>
          <!-- Share -->
         </div>
         <!-- Ingredients -->
-      <div class="col s12 m6" id="ingredients">
+        <div class="row">
+      <div class="col s12 m6" id="more-ingredients">
       <h3> Ingredients </h3>
         {{ add_recipes.ingredients }}
       </div>
       <!-- Method -->
-      <div class="col s12 m6" id="method">
+      <div class="col s12 m6" id="more-method">
       <h3> Method </h3>
         {{ add_recipes.method }}
+      </div>
       </div>
     </div>
   {% endfor %} 
