Add image_url to upload recipe. Recipe cards displayed in a row

--- a/templates/add_recipes.html
+++ b/templates/add_recipes.html
@@ -38,9 +38,6 @@
           >&nbsp;&nbsp;Recipe Name</label
         >
       </div>
-
-
-
       <!-- Upload Image -->
       <div class="input-field col s12">
         <input
@@ -50,13 +47,11 @@
           class="validate"
           required
         />
-        <label class="fas fa-images" for="image_url" 
-          >-&nbsp;&nbsp;Upload an Image Url</label
+        <label class="fas fa-images" for="image_url"
+          >&nbsp;&nbsp;Upload an Image Url</label
         >
         <img src="{{ image_url }}" />
       </div>
-
-
       <!-- Description -->
       <div class="input-field col s12">
         <input
@@ -79,9 +74,7 @@
           >&nbsp;&nbsp;Prep Time</label
         >
       </div>
-
       <!-- Baking Time -->
-
       <div class="input-field col s12">
         <input id="bakingtime" name="bakingtime" type="text" required />
         <label class="fas fa-hourglass-end" for="bakingtime"
@@ -89,7 +82,6 @@
         >
       </div>
       <!-- Serves -->
-
       <div class="input-field col s12">
         <input
           id="serves"
@@ -101,7 +93,6 @@
         <label class="fas fa-utensils" for="serves">&nbsp;&nbsp;Serves</label>
       </div>
       <!-- Ingredients -->
-
       <div class="input-field col s12">
         <input
           id="ingredients"
@@ -115,7 +106,6 @@
         >
       </div>
       <!-- Method -->
-
       <div class="input-field col s12">
         <input
           id="method"
