--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+{% block content %}
 
 <div class="hero-block">
   <img
@@ -16,42 +17,42 @@
 
 <!-- Recipe Cards -->
 
-{% for add_recipes in add_recipes %}
 <div class="container">
   <div class="row">
+  {% for recipe in add_recipes %}
     <div class="col s12 m3">
       <div class="card">
         <!-- Image -->
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="{{ add_recipes.image_url }}" />
+          <img class="activator" src="{{ recipe.image_url }}" />
         </div>
         <!-- Recipe Name-->
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">
-            {{ add_recipes.recipe_name }} <br />
+            {{ recipe.recipe_name }} <br />
             <i class="fas fa-ellipsis-h"></i
           ></span>
         </div>
         <!-- Recipe Name -->
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4"
-            >{{ add_recipes.recipe_name }} <i class="fas fa-times"></i
+            >{{ recipe.recipe_name }} <i class="fas fa-times"></i
           ></span>
           <!-- Preptime/ Bakingtime/ Serves -->
           <ul>
-            <i class="far fa-clock"> {{ add_recipes.preptime }}</i>
-            <i class="fas fa-hourglass-end"> {{ add_recipes.bakingtime }}</i>
-            <i class="fas fa-utensils"> {{ add_recipes.serves }}</i>
+            <i class="far fa-clock"> {{ recipe.preptime }}</i>
+            <i class="fas fa-hourglass-end"> {{ recipe.bakingtime }}</i>
+            <i class="fas fa-utensils"> {{ recipe.serves }}</i>
           </ul>
           <!-- Description -->
-          <p>{{ add_recipes.description }}</p>
+          <p>{{ recipe.description }}</p>
           <!-- View More -->
           <p><a href="{{ url_for('view_more') }}">View More</a></p>
         </div>
       </div>
     </div>
+    {% endfor %}
   </div>
 </div>
-{% endfor %}
 
 {% endblock %}
