Formatted 'View More' link to display single recipe id

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,8 @@
       </ul>
     </header>
 
-    {% block content %} {% endblock %}
+    {% block content %}
+    {% endblock %}
 
     <!-- Footer Menu -->
     <footer class="page-footer">
