--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,6 +55,7 @@
 
 /* Recipe Cards */
 
+
 /* Add Recipes */
 #add_recipe_title {
   font-family: "Libre Franklin", sans-serif;
@@ -68,6 +69,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
 
 .button {
   font-family: "Libre Franklin", sans-serif;
@@ -94,6 +96,7 @@
 
 #recipe_img {
   padding-left: 30px;
+  padding-right: 30px;
 }
 
 .recipe_name {
@@ -117,7 +120,6 @@
     font-size: 22px;
     color: white;
     text-align: center;
-    
 }
 
 
@@ -137,7 +139,10 @@
   text-align: center;
 }
 
-
+.btns-vm{
+    margin-bottom: 20px;
+    padding-left: 30px;
+}
 
 /* Footer */
 .page-footer {
