--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
       <div class="card">
         <!-- Image -->
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="{{ recipe.image_url }}" />
+          <img class="activator" src="{{ recipe.image_url }}" width="500" height="200"/>
         </div>
         <!-- Recipe Name-->
         <div class="card-content">
@@ -47,7 +47,7 @@
           <!-- Description -->
           <p>{{ recipe.description }}</p>
           <!-- View More -->
-          <p><a href="{{ url_for('view_more') }}">View More</a></p>
+          <p><a href="{{ url_for('view_more', recipe_id=recipe._id) }}">View More</a></p>
         </div>
       </div>
     </div>
