--- a/templates/view_more.html
+++ b/templates/view_more.html
@@ -1,56 +1,66 @@
 {% extends "base.html" %} {% block content %}
 
 
-<body>
-  <div class="container" id="background">
-    <div class="row">
-    {% for recipe in add_recipes %}
-    <!-- Image -->
-      <div class="col s12 m6" id="recipe_img">
-          <img class="responsive-img z-depth-3" src="{{ recipe.image_url }}" />
+{% for recipe in recipe %}
+<div class="container" id="background">
+	<div class="row">
+		<!-- Image -->
+		<div class="col s12 m6" id="recipe_img">
+			<img class="responsive-img z-depth-3" src="{{ recipe.image_url }}" />
       </div>
-      <!-- Recipe Name -->
-      <div class="recipe_name">
-        {{ recipe.recipe_name }} 
-        </div>
+			<!-- Recipe Name -->
+			<div class="recipe_name">
+				{{ recipe.recipe_name }}
+			</div>
+			<br/>
+			<br/>
+			<div class="symbols">
+				<!-- Preptime -->
+				<div class="row">
+					<div class="col s4">
+						<i class="far fa-clock" id="preptime-vm">
         <br/>
-        <br/>
-        <div class="symbols">
-        <!-- Preptime -->
-        <p class="recipe_info">Prep Time&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Baking Time&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Serves</p>
-        <i class="far fa-clock" id="preptime-vm">
+         <br/>
         {{ recipe.preptime }}
         </i>
-        &nbsp; &nbsp; &nbsp;
-        <!-- Baking Time -->
-        <i class="fas fa-hourglass-end" id="bakingtime-vm">
+						&nbsp; &nbsp; &nbsp;
+						<!-- Baking Time -->
+						<i class="fas fa-hourglass-end" id="bakingtime-vm">
+        <br />
+         <br/>
         {{ recipe.bakingtime }} 
         </i>
-        &nbsp; &nbsp; &nbsp;
-        <!-- Serves -->
-        <i class="fas fa-utensils" id="serves-vm">
+						&nbsp; &nbsp; &nbsp;
+						<!-- Serves -->
+						<i class="fas fa-utensils" id="serves-vm">
+        <br />
+         <br/>
         {{ recipe.serves }}
         </i>
-        &nbsp; &nbsp; &nbsp;
-        </div>
-         <!-- Share -->
-        </div>
-        <!-- Ingredients -->
-        <div class="row">
-      <div class="col s12 m6" id="more-ingredients">
-      <h3> Ingredients </h3>
-        {{ recipe.ingredients }}
-      </div>
-      <!-- Method -->
-      <div class="col s12 m6" id="more-method">
-      <h3> Method </h3>
-        {{ recipe.method }}
-      </div>
-      {% endfor %} 
-      </div>
-    </div>
- 
-</body>
- 
+						&nbsp; &nbsp; &nbsp;
+					</div>
+				</div>
+			</div>
+			<!-- Share -->
+		</div>
+		<!-- Ingredients -->
+		<div class="row">
+			<div class="col s12 m6" id="more-ingredients">
+				<h3> Ingredients </h3>
+				{{ recipe.ingredients }}
+			</div>
+			<!-- Method -->
+			<div class="col s12 m6" id="more-method">
+				<h3> Method </h3>
+				{{ recipe.method }}
+			</div>
+		</div>
+		<div class="btns-vm">
+			<!-- Update & Delete Buttons -->
+			<a class="waves-effect waves-light btn" id="update-btn">Update</a>
+			<a class="waves-effect waves-light btn" id="delete-btn">Delete</a>
+		</div>
+	</div>
+	{% endfor %}
 
- {% endblock %}
+	{% endblock %}
