Added the update_recipe.html and link

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     alt="hero-image"
   />
   <div class="text">
-    <h2>Explore and share a variety of home made dessert recipes</h2>
+  <!-- Credit to responsive typography from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_text -->
+    <h2 style="font-size:4vw;">Explore and share a variety of home made dessert recipes</h2>
   </div>
 </div>
 
