--- a/templates/view_more.html
+++ b/templates/view_more.html
@@ -57,8 +57,8 @@
 		</div>
 		<div class="btns-vm">
 			<!-- Update & Delete Buttons -->
-			<a class="waves-effect waves-light btn" id="update-btn">Update</a>
-			<a class="waves-effect waves-light btn" id="delete-btn">Delete</a>
+			<a href="{{url_for('update_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn" id="update-btn">Update</a>
+			<a href="#" class="waves-effect waves-light btn" id="delete-btn">Delete</a>
 		</div>
 	</div>
 	{% endfor %}
