--- a/templates/base.html
+++ b/templates/base.html
@@ -23,13 +23,14 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="static/images/favicon.png"
+      href="{{ url_for('static', filename='images/favicon.png') }}"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@200&display=swap"
       rel="stylesheet"
     />
-    {% block styles %} {% endblock %}
+    {% block styles %} 
+    {% endblock %}
 
     <title>The Baking Book</title>
   </head>
@@ -40,7 +41,7 @@
       <nav class="nav-colour">
         <div class="nav-wrapper">
           <a href="{{ url_for('index') }}" class="brand-logo">
-            <img class="img-responsive" src="static/images/logo.png" alt="logo"
+            <img class="img-responsive" src="{{ url_for('static', filename='images/logo.png') }}" alt="logo"
           /></a>
 
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"
