--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -3,7 +3,7 @@
 <!-- Update Recipes -->
 <h3 id="add_recipe_title">Update A Recipe</h3>
 <div class="row-card-panel grey lighten-5 container">
-  <form class="col s12" method="POST" action="{{ url_for('add_recipes') }}">
+  <form class="col s12" method="POST" action="{{ url_for('update_recipe', recipe_id=recipe._id) }}">
     <div class="row">
       <!-- Author Name -->
       <div class="input-field col s12">
@@ -135,6 +135,12 @@
         Update Recipe
         <i class="material-icons left"></i>
       </button>
+      <!-- Cancel Button -->
+      <a href="{{ url_for('index') }}" class="button">
+      Cancel
+      <i class="material-icons right"></i>
+      </a>
+
     </div>
   </form>
 </div>
