Linked search to mongo.db index & added search.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('add_recipes') }}">Upload Recipes</a></li>
-            <li><a href="#" class="fas fa-search"></a></li>
+            <li><a href="{{ url_for('search') }}" class="fas fa-search"></a></li>
           </ul>
         </div>
       </nav>
@@ -60,7 +60,7 @@
         <li><h3 class="center-align">The Baking Book</h3></li>
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="{{ url_for('add_recipes') }}">Upload Recipes</a></li>
-        <li><a href="#" class="fas fa-search"></a></li>
+        <li><a href="{{ url_for('search') }}" class="fas fa-search"></a></li>
       </ul>
     </header>
 
