--- a/templates/add_recipes.html
+++ b/templates/add_recipes.html
@@ -1,4 +1,15 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} 
+{% block content %} 
+
+{% block styles %}
+<!-- Index CSS-->
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='css/add_recipe.css') }}"
+  type="text/css"
+/>
+{% endblock %}
+
 <div class="hero-block">
   <img
     class="hero-image"
@@ -11,7 +22,7 @@
 
 <!-- Upload Recipes -->
 <h3 id="add_recipe_title">Upload A Recipe</h3>
-<div class="row-card-panel grey lighten-5 container">
+<div class="row-card-panel container">
   <form class="col s12" method="POST" action="{{ url_for('add_recipes') }}">
     <div class="row">
       <!-- Author Name -->
@@ -23,7 +34,9 @@
           class="validate"
           required
         />
-        <label class="fas fa-user" for="author">&nbsp;&nbsp;Author</label>
+        <label class="fas fa-user" for="author" id="name">
+          &nbsp;&nbsp;<span>Author</span></label
+        >
       </div>
       <!-- Recipe Name -->
       <div class="input-field col s12">
@@ -35,7 +48,7 @@
           required
         />
         <label class="fas fa-cookie-bite" for="recipe_name"
-          >&nbsp;&nbsp;Recipe Name</label
+          >&nbsp;&nbsp;<span>Recipe Name</span></label
         >
       </div>
       <!-- Upload Image -->
@@ -48,7 +61,7 @@
           required
         />
         <label class="fas fa-images" for="image_url"
-          >&nbsp;&nbsp;Upload an Image Url</label
+          >&nbsp;&nbsp;<span>Upload an Image Url</span></label
         >
         <img src="{{ image_url }}" />
       </div>
@@ -64,21 +77,21 @@
           required
         />
         <label class="fas fa-plus-circle" for="description"
-          >&nbsp;&nbsp;Description</label
+          >&nbsp;&nbsp;<span>Description</span></label
         >
       </div>
       <!-- Preptime -->
       <div class="input-field col s12">
         <input id="preptime" name="preptime" type="text" required />
         <label class="fas fa-clock" for="prep-time"
-          >&nbsp;&nbsp;Prep Time</label
+          >&nbsp;&nbsp;<span>Prep Time</span></label
         >
       </div>
       <!-- Baking Time -->
       <div class="input-field col s12">
         <input id="bakingtime" name="bakingtime" type="text" required />
         <label class="fas fa-hourglass-end" for="bakingtime"
-          >&nbsp;&nbsp;Baking Time</label
+          >&nbsp;&nbsp;<span>Baking Time</span></label
         >
       </div>
       <!-- Serves -->
@@ -90,7 +103,9 @@
           class="validate"
           required
         />
-        <label class="fas fa-utensils" for="serves">&nbsp;&nbsp;Serves</label>
+        <label class="fas fa-utensils" for="serves"
+          >&nbsp;&nbsp;<span>Serves</span></label
+        >
       </div>
       <!-- Ingredients -->
       <div class="input-field col s12">
@@ -102,7 +117,7 @@
           required
         />
         <label class="fas fa-mortar-pestle" for="ingredients"
-          >&nbsp;&nbsp;Ingredients</label
+          >&nbsp;&nbsp;<span>Ingredients</span></label
         >
       </div>
       <!-- Method -->
@@ -115,7 +130,7 @@
           required
         />
         <label class="fas fa-arrow-circle-down" for="method"
-          >&nbsp;&nbsp;Method</label
+          >&nbsp;&nbsp;<span>Method</span></label
         >
       </div>
       <!-- Submit Button -->
