--- a/templates/base.html
+++ b/templates/base.html
@@ -48,8 +48,8 @@
             ><i class="fas fa-bars"></i
           ></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="{{ url_for('index') }}">Home</a></li>
-            <li><a href="{{ url_for('add_recipes') }}">Upload Recipes</a></li>
+            <li><a href="{{ url_for('index') }}" class="home">Home</a></li>
+            <li><a href="{{ url_for('add_recipes') }}" class="upload" >Upload Recipes</a></li>
             <li><a href="{{ url_for('search') }}" class="fas fa-search"></a></li>
           </ul>
         </div>
@@ -72,7 +72,7 @@
       <div class="footer-copyright">
         <div class="container">
           ©2020 Copyright Amie Johnstone (For Educational Purposes Only)
-        </div>
+           </div>
         <div class="social-icons">
           <a href="https://www.facebook.com/" target="_blank"
             ><li class="fab fa-facebook"></li
