--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %} {% block content %}
 
+{% block styles %}
+<!-- Index CSS-->
+     <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/update_recipe.css') }}"
+      type="text/css"
+    />
+{% endblock %}
+
+
 <!-- Update Recipes -->
 <h3 id="add_recipe_title">Update A Recipe</h3>
 <div class="row-card-panel grey lighten-5 container">
