--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -18,7 +18,7 @@
       <!-- Author Name -->
       <div class="input-field col s12">
         <input
-          value="{{ recipe.recipe_name }}"
+          value="{{ recipe.author }}"
           id="author"
           name="author"
           type="text"
