--- a/templates/search.html
+++ b/templates/search.html
@@ -9,22 +9,22 @@
     />
 {% endblock %}
 
+<!-- Page Title -->
 
+<h1 class="search_recipe">Search for a Recipe</h1>
 
-<h1>Search for a Recipe</h1>
-
-    <div class="row card- panel grey lighten-5">
+<!-- Search Form -->
+    <div class="row card- panel">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12 m8">
-                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                    <i class="fas fa-search prefix"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
                     <label for="query">Search Recipes</label>
                 </div>
                 <div class="col s12 m4">
-                <a href=" {{ url_for('search') }}" class="red btn text-shadow">Reset</a>
-                    <button type="submit" class="light-blue darken-1 btn text-shadow">
-                        <i class="fas fa-search left">Search</i>
+                <a href=" {{ url_for('search') }}" class="btn reset">Reset</a>
+                    <button type="submit" class="btn search">Search
                     </button>
                 </div>
             </div>
@@ -70,7 +70,6 @@
     {% endfor %}
   </div>
 </div> 
-
 
 
 {% endblock %}
